--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "publisher": "yanxingzhe",
   "repository": {
     "type": "git",
-    "url": "https://github.com/anyexinglue/bst-snippets/"
+    "url": "https://github.com/anyexinglue/bst"
   },
   "engines": {
     "vscode": "^1.5.0"
